# apsi

./: .gitattributes  Apsi.postman_collection.json  Dockerfile  README.md  apsi.code-workspace  docker-compose.yml  package-lock.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Cargo.toml  Dockerfile  README.md  TODO.md
backend/config/: app.json  webserver.json
backend/migrations/: V10__notifications.sql  V1__initial.sql  V3__attachments.sql  V4__roles.sql  V9__document_sets.sql
backend/seeding/: admin.sql  dummy3_events.sql  dummy_data.sql
backend/src/: config.rs  main.rs  state.rs  tracing.rs
backend/src/database/: config.rs  mod.rs
backend/src/database/repositories/: documents.rs  mod.rs  users.rs
backend/src/models/: attachment.rs  comment.rs  document.rs  document_set.rs  event.rs  mod.rs  role.rs  set_version.rs  user.rs  version.rs  version_state.rs
backend/src/routing/: fallback.rs  healthcheck.rs  mod.rs
backend/src/routing/api/: mod.rs
backend/src/routing/api/auth/: am_admin.rs  authorization_keys.rs  authorize.rs  claims.rs  error.rs  login.rs  mod.rs  register.rs  users.rs  who_am_i.rs
backend/src/routing/api/docs/: attachments.rs  documents.rs  permission.rs  states.rs  versions.rs
backend/src/routing/api/documents/: documents.rs  mod.rs  versions.rs
backend/src/routing/api/events/: mod.rs
backend/src/routing/api/sets/: mod.rs
backend/src/services/: config.rs  mod.rs  s3storage.rs  state.rs  tracing.rs  util.rs
backend/src/services/auth/: auth_keys.rs  claims.rs  error.rs  mod.rs
backend/src/services/database/: config.rs  mod.rs
backend/src/services/database/repositories/: comments.rs  document_sets.rs  documents.rs  events.rs  files.rs  mod.rs  permission.rs  users.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: ApiCommunication.ts  App.test.tsx  App.tsx  Attachments.tsx  DocVer.tsx  Documents.tsx  Hello.tsx  Login.tsx  LoginManager.ts  Register.tsx  RoutingRoot.test.tsx  RoutingRoot.tsx  TableStyle.css  VersionCreator.tsx  VersionEditor.tsx  Versions.tsx  index.css  index.tsx
frontend/src/accounts/: Login.tsx  Register.tsx
frontend/src/api/: ApiClient.ts  BackendApiClient.ts  DummyApiClient.ts
frontend/src/attachments/: Attachments.tsx
frontend/src/comments/: Comment.tsx  CommentEditor.tsx  Comments.tsx
frontend/src/document_set/: DocumentsSet.tsx
frontend/src/documents/: Documents.tsx
frontend/src/models/: AuthResponse.ts  ChangeVersionState.ts  ChangeVersionState.tsx  Comment.ts  Comment.tsx  CreateComment.ts  CreateComment.tsx  CreateDocument.ts  CreateSet.ts  CreateSetVersion.ts  CreateVersion.ts  DocFile.ts  Document.ts  DocumentSet.ts  DocumentSetVersion.ts  DocumentSetWithInitialVersion.ts  DocumentVersion.ts  DocumentVersionMember.ts  DocumentVersionSet.ts  DocumentWithInitialVersion.ts  Notification.ts  Role.ts  Set.ts  SetDocumentVersion.ts  SetVersion.ts  SetWithInitialVersion.ts  StateBadge.tsx  UpdateDocument.ts  UpdateVersion.ts  User.ts  UserWithRoles.ts
frontend/src/notifications/: Notifications.tsx
frontend/src/set_listed/: SetListed.tsx
frontend/src/set_version_documents/: SetVersionDocuments.tsx
frontend/src/set_versions/: SetCreator.tsx  SetEditor.tsx  SetNameEditor.tsx  SetVersionDocuments.tsx  SetVersionNameChooser.tsx  SetVersions.tsx
frontend/src/sets/: Sets.tsx
frontend/src/table/: SortedTable.tsx  TableBody.tsx  TableHead.tsx
(+16 files in other folders)
