[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Specific versions to invalidate build cache less often
[dependencies]
axum = "0.6.12"
config = { version = "0.13.3", default-features = false, features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = [
    "macros",
    "signal",
    "rt-multi-thread",
] }
tower-http = { version = "0.4.0", features = ["trace", "fs", "cors"] }
tower-service = "0.3.2"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }

# Optimize dependencies as if it was release
[profile.dev.package."*"]
debug = false
opt-level = 3
debug-assertions = false
overflow-checks = false
