[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Specific versions to invalidate build cache less often
[dependencies]
axum = { version = "0.6.12", features = ["headers", "macros"] }
bb8 = "0.8.0"
bb8-postgres = { version = "0.8.1", features = ["with-uuid-1"] }
config = { version = "0.13.3", default-features = false, features = ["json"] }
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = [
    "macros",
    "signal",
    "rt-multi-thread",
] }
tokio-postgres = { version = "0.7.8", features = ["with-uuid-1"] }
tower-http = { version = "0.4.0", features = ["trace", "fs", "cors"] }
tower-service = "0.3.2"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
uuid = { version = "1.3.0", features = ["serde"] }

# Optimize dependencies as if it was release
[profile.dev.package."*"]
debug = false
opt-level = 3
debug-assertions = false
overflow-checks = false
