[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
bb8 = "0.8.0"
hex = "0.4.3"
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
rust-s3 = "0.33.0"
serde_json = "1.0.95"
sha2 = "0.10.6"
tower-service = "0.3.2"
tracing = "0.1.37"
tracing-appender = "0.2.2"
mime = "0.3.17"

[dependencies.axum]
version = "0.6.12"
features = ["headers", "macros", "multipart"]

[dependencies.bb8-postgres]
version = "0.8.1"
features = ["with-uuid-1"]

[dependencies.chrono]
version = "0.4.24"
features = ["serde"]

[dependencies.config]
version = "0.13.3"
default-features = false
features = ["json"]

[dependencies.refinery]
version = "0.8.7"
features = ["tokio-postgres"]

[dependencies.serde]
version = "1.0.159"
features = ["derive"]

[dependencies.tokio]
version = "1.27.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.tokio-postgres]
version = "0.7.8"
features = ["with-uuid-1", "with-chrono-0_4"]

[dependencies.tower-http]
version = "0.4.0"
features = ["trace", "fs", "cors"]

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter", "json"]

[dependencies.uuid]
version = "1.3.0"
features = ["serde", "v4"]

#[profile.dev.package."*"]
#debug = false
#opt-level = 3
#debug-assertions = false
#overflow-checks = false
